[package]
name = "network_analyzer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pcap = "0.9.2"
etherparse = "0.12.0"
hex = "0.4.3"
libc = "0.2.127"
chrono = "0.4.20"
num-traits = "0.2.15"

[[bin]]
name = "sample_app"
path = "src/main.rs"

[lib]
name = "network_analyzer"
path = "src/lib.rs"
