[package]
name = "network_analyzer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pcap = "1.0.0"
etherparse = "0.12.0"
hex = "0.4.3"
libc = "0.2.127"
chrono = "0.4.20"
num-traits = "0.2.15"
threadpool = "1.8.1"
num_cpus = "1.13.1"
clap = {version="3.2.16",features = [ "derive" ]}

[[bin]]
name = "sample_app"
path = "src/main.rs"

[lib]
name = "network_analyzer"
path = "src/lib.rs"
